# ex2_oop

./: CMakeLists.txt  README.txt
include/: AlphaStar.h  Board.h  CMakeLists.txt  Coin.h  Lives.h  Location.h  Monster.h  Tile.h  game_handler.h  io.h  macros.h  player.h  score.h
resources/: Board.txt  CMakeLists.txt
src/: AlphaStar.cpp  Board.cpp  CMakeLists.txt  Coin.cpp  Lives.cpp  Location.cpp  Monster.cpp  Tile.cpp  game_handler.cpp  io.cpp  main.cpp  player.cpp  score.cpp
